🚀 Add complete lead generation funnel
✅ New Features:
- Homepage email capture with dual integration (Supabase + Beehiiv)
- Thank you page with quiz CTA
- 5-question segmentation quiz with smart routing
- Support page with monetization options
- Conditional SMS opt-in with phone collection
- Smooth scrolling UX between quiz questions

✅ Database Integration:
- Supabase client setup with fallback placeholders
- signups table for email capture tracking
- quiz_responses table for segmentation data
- Proper RLS policies for security

✅ Advanced Features:
- Real product links (772 Eats integration)
- Mobile-responsive design
- Error handling with graceful fallbacks
- Smart routing based on support willingness

✅ Documentation:
- Complete setup guide (FUNNEL_SETUP.md)
- Segmentation strategy guide (QUIZ_SEGMENTATION.md)
- Database migration scripts

Ready for production lead generation! 🎯

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sanity/client": "^6.28.4",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.82.0",
+    "@supabase/supabase-js": "^2.50.2",
     "axios": "^1.6.7",
     "next": "^14.1.0",
     "next-sanity": "^9.9.9",
