--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@supabase/supabase-js": "^2.50.2",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.6.7",
+    "ical-generator": "^10.0.0",
     "next": "^14.1.0",
     "next-sanity": "^9.9.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-facebook-pixel": "^1.0.4",
-    "sanity": "^3.82.0"
+    "resend": "^6.5.2",
+    "rss-parser": "^3.13.0",
+    "sanity": "^3.82.0",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
