--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "^2.50.2",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.6.7",
+    "dotenv": "^17.2.3",
     "ical-generator": "^10.0.0",
     "next": "^14.1.0",
     "next-sanity": "^9.9.9",
@@ -29,7 +30,9 @@
     "resend": "^6.5.2",
     "rss-parser": "^3.13.0",
     "sanity": "^3.82.0",
-    "stripe": "^20.0.0"
+    "slugify": "^1.6.6",
+    "stripe": "^20.0.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
